--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	knolleary/PubSubClient@^2.8.0
 	adafruit/DHT sensor library@^1.4.3
 	claws/BH1750@^1.3.0
+	arduino-libraries/NTPClient@^3.2.1
